grid spacing and card tweaks

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -565,6 +565,20 @@ table {
  * @import "components/forms";
  */
 
+.button {
+  background-color: #47cdff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: .5rem;
+  font-size: .875rem;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  -webkit-box-shadow: 0 2px 7px 0 #b0eaff;
+          box-shadow: 0 2px 7px 0 #b0eaff;
+}
+
 /**
  * This injects all of Tailwind's utility classes, generated based on your
  * config file.
@@ -790,11 +804,11 @@ table {
 }
 
 .bg-blue {
-  background-color: #3490dc;
+  background-color: #47cdff;
 }
 
 .bg-blue-light {
-  background-color: #6cb2eb;
+  background-color: #8ae2fe;
 }
 
 .bg-blue-lighter {
@@ -1082,11 +1096,11 @@ table {
 }
 
 .hover\:bg-blue:hover {
-  background-color: #3490dc;
+  background-color: #47cdff;
 }
 
 .hover\:bg-blue-light:hover {
-  background-color: #6cb2eb;
+  background-color: #8ae2fe;
 }
 
 .hover\:bg-blue-lighter:hover {
@@ -1374,11 +1388,11 @@ table {
 }
 
 .focus\:bg-blue:focus {
-  background-color: #3490dc;
+  background-color: #47cdff;
 }
 
 .focus\:bg-blue-light:focus {
-  background-color: #6cb2eb;
+  background-color: #8ae2fe;
 }
 
 .focus\:bg-blue-lighter:focus {
@@ -1738,11 +1752,11 @@ table {
 }
 
 .border-blue {
-  border-color: #3490dc;
+  border-color: #47cdff;
 }
 
 .border-blue-light {
-  border-color: #6cb2eb;
+  border-color: #8ae2fe;
 }
 
 .border-blue-lighter {
@@ -2030,11 +2044,11 @@ table {
 }
 
 .hover\:border-blue:hover {
-  border-color: #3490dc;
+  border-color: #47cdff;
 }
 
 .hover\:border-blue-light:hover {
-  border-color: #6cb2eb;
+  border-color: #8ae2fe;
 }
 
 .hover\:border-blue-lighter:hover {
@@ -2322,11 +2336,11 @@ table {
 }
 
 .focus\:border-blue:focus {
-  border-color: #3490dc;
+  border-color: #47cdff;
 }
 
 .focus\:border-blue-light:focus {
-  border-color: #6cb2eb;
+  border-color: #8ae2fe;
 }
 
 .focus\:border-blue-lighter:focus {
@@ -5157,11 +5171,11 @@ table {
 }
 
 .text-blue {
-  color: #3490dc;
+  color: #47cdff;
 }
 
 .text-blue-light {
-  color: #6cb2eb;
+  color: #8ae2fe;
 }
 
 .text-blue-lighter {
@@ -5449,11 +5463,11 @@ table {
 }
 
 .hover\:text-blue:hover {
-  color: #3490dc;
+  color: #47cdff;
 }
 
 .hover\:text-blue-light:hover {
-  color: #6cb2eb;
+  color: #8ae2fe;
 }
 
 .hover\:text-blue-lighter:hover {
@@ -5741,11 +5755,11 @@ table {
 }
 
 .focus\:text-blue:focus {
-  color: #3490dc;
+  color: #47cdff;
 }
 
 .focus\:text-blue-light:focus {
-  color: #6cb2eb;
+  color: #8ae2fe;
 }
 
 .focus\:text-blue-lighter:focus {
@@ -6482,11 +6496,11 @@ table {
   }
 
   .sm\:bg-blue {
-    background-color: #3490dc;
+    background-color: #47cdff;
   }
 
   .sm\:bg-blue-light {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .sm\:bg-blue-lighter {
@@ -6774,11 +6788,11 @@ table {
   }
 
   .sm\:hover\:bg-blue:hover {
-    background-color: #3490dc;
+    background-color: #47cdff;
   }
 
   .sm\:hover\:bg-blue-light:hover {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .sm\:hover\:bg-blue-lighter:hover {
@@ -7066,11 +7080,11 @@ table {
   }
 
   .sm\:focus\:bg-blue:focus {
-    background-color: #3490dc;
+    background-color: #47cdff;
   }
 
   .sm\:focus\:bg-blue-light:focus {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .sm\:focus\:bg-blue-lighter:focus {
@@ -7422,11 +7436,11 @@ table {
   }
 
   .sm\:border-blue {
-    border-color: #3490dc;
+    border-color: #47cdff;
   }
 
   .sm\:border-blue-light {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .sm\:border-blue-lighter {
@@ -7714,11 +7728,11 @@ table {
   }
 
   .sm\:hover\:border-blue:hover {
-    border-color: #3490dc;
+    border-color: #47cdff;
   }
 
   .sm\:hover\:border-blue-light:hover {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .sm\:hover\:border-blue-lighter:hover {
@@ -8006,11 +8020,11 @@ table {
   }
 
   .sm\:focus\:border-blue:focus {
-    border-color: #3490dc;
+    border-color: #47cdff;
   }
 
   .sm\:focus\:border-blue-light:focus {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .sm\:focus\:border-blue-lighter:focus {
@@ -10825,11 +10839,11 @@ table {
   }
 
   .sm\:text-blue {
-    color: #3490dc;
+    color: #47cdff;
   }
 
   .sm\:text-blue-light {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .sm\:text-blue-lighter {
@@ -11117,11 +11131,11 @@ table {
   }
 
   .sm\:hover\:text-blue:hover {
-    color: #3490dc;
+    color: #47cdff;
   }
 
   .sm\:hover\:text-blue-light:hover {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .sm\:hover\:text-blue-lighter:hover {
@@ -11409,11 +11423,11 @@ table {
   }
 
   .sm\:focus\:text-blue:focus {
-    color: #3490dc;
+    color: #47cdff;
   }
 
   .sm\:focus\:text-blue-light:focus {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .sm\:focus\:text-blue-lighter:focus {
@@ -12136,11 +12150,11 @@ table {
   }
 
   .md\:bg-blue {
-    background-color: #3490dc;
+    background-color: #47cdff;
   }
 
   .md\:bg-blue-light {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .md\:bg-blue-lighter {
@@ -12428,11 +12442,11 @@ table {
   }
 
   .md\:hover\:bg-blue:hover {
-    background-color: #3490dc;
+    background-color: #47cdff;
   }
 
   .md\:hover\:bg-blue-light:hover {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .md\:hover\:bg-blue-lighter:hover {
@@ -12720,11 +12734,11 @@ table {
   }
 
   .md\:focus\:bg-blue:focus {
-    background-color: #3490dc;
+    background-color: #47cdff;
   }
 
   .md\:focus\:bg-blue-light:focus {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .md\:focus\:bg-blue-lighter:focus {
@@ -13076,11 +13090,11 @@ table {
   }
 
   .md\:border-blue {
-    border-color: #3490dc;
+    border-color: #47cdff;
   }
 
   .md\:border-blue-light {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .md\:border-blue-lighter {
@@ -13368,11 +13382,11 @@ table {
   }
 
   .md\:hover\:border-blue:hover {
-    border-color: #3490dc;
+    border-color: #47cdff;
   }
 
   .md\:hover\:border-blue-light:hover {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .md\:hover\:border-blue-lighter:hover {
@@ -13660,11 +13674,11 @@ table {
   }
 
   .md\:focus\:border-blue:focus {
-    border-color: #3490dc;
+    border-color: #47cdff;
   }
 
   .md\:focus\:border-blue-light:focus {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .md\:focus\:border-blue-lighter:focus {
@@ -16479,11 +16493,11 @@ table {
   }
 
   .md\:text-blue {
-    color: #3490dc;
+    color: #47cdff;
   }
 
   .md\:text-blue-light {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .md\:text-blue-lighter {
@@ -16771,11 +16785,11 @@ table {
   }
 
   .md\:hover\:text-blue:hover {
-    color: #3490dc;
+    color: #47cdff;
   }
 
   .md\:hover\:text-blue-light:hover {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .md\:hover\:text-blue-lighter:hover {
@@ -17063,11 +17077,11 @@ table {
   }
 
   .md\:focus\:text-blue:focus {
-    color: #3490dc;
+    color: #47cdff;
   }
 
   .md\:focus\:text-blue-light:focus {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .md\:focus\:text-blue-lighter:focus {
@@ -17790,11 +17804,11 @@ table {
   }
 
   .lg\:bg-blue {
-    background-color: #3490dc;
+    background-color: #47cdff;
   }
 
   .lg\:bg-blue-light {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .lg\:bg-blue-lighter {
@@ -18082,11 +18096,11 @@ table {
   }
 
   .lg\:hover\:bg-blue:hover {
-    background-color: #3490dc;
+    background-color: #47cdff;
   }
 
   .lg\:hover\:bg-blue-light:hover {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .lg\:hover\:bg-blue-lighter:hover {
@@ -18374,11 +18388,11 @@ table {
   }
 
   .lg\:focus\:bg-blue:focus {
-    background-color: #3490dc;
+    background-color: #47cdff;
   }
 
   .lg\:focus\:bg-blue-light:focus {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .lg\:focus\:bg-blue-lighter:focus {
@@ -18730,11 +18744,11 @@ table {
   }
 
   .lg\:border-blue {
-    border-color: #3490dc;
+    border-color: #47cdff;
   }
 
   .lg\:border-blue-light {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .lg\:border-blue-lighter {
@@ -19022,11 +19036,11 @@ table {
   }
 
   .lg\:hover\:border-blue:hover {
-    border-color: #3490dc;
+    border-color: #47cdff;
   }
 
   .lg\:hover\:border-blue-light:hover {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .lg\:hover\:border-blue-lighter:hover {
@@ -19314,11 +19328,11 @@ table {
   }
 
   .lg\:focus\:border-blue:focus {
-    border-color: #3490dc;
+    border-color: #47cdff;
   }
 
   .lg\:focus\:border-blue-light:focus {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .lg\:focus\:border-blue-lighter:focus {
@@ -22133,11 +22147,11 @@ table {
   }
 
   .lg\:text-blue {
-    color: #3490dc;
+    color: #47cdff;
   }
 
   .lg\:text-blue-light {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .lg\:text-blue-lighter {
@@ -22425,11 +22439,11 @@ table {
   }
 
   .lg\:hover\:text-blue:hover {
-    color: #3490dc;
+    color: #47cdff;
   }
 
   .lg\:hover\:text-blue-light:hover {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .lg\:hover\:text-blue-lighter:hover {
@@ -22717,11 +22731,11 @@ table {
   }
 
   .lg\:focus\:text-blue:focus {
-    color: #3490dc;
+    color: #47cdff;
   }
 
   .lg\:focus\:text-blue-light:focus {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .lg\:focus\:text-blue-lighter:focus {
@@ -23444,11 +23458,11 @@ table {
   }
 
   .xl\:bg-blue {
-    background-color: #3490dc;
+    background-color: #47cdff;
   }
 
   .xl\:bg-blue-light {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .xl\:bg-blue-lighter {
@@ -23736,11 +23750,11 @@ table {
   }
 
   .xl\:hover\:bg-blue:hover {
-    background-color: #3490dc;
+    background-color: #47cdff;
   }
 
   .xl\:hover\:bg-blue-light:hover {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .xl\:hover\:bg-blue-lighter:hover {
@@ -24028,11 +24042,11 @@ table {
   }
 
   .xl\:focus\:bg-blue:focus {
-    background-color: #3490dc;
+    background-color: #47cdff;
   }
 
   .xl\:focus\:bg-blue-light:focus {
-    background-color: #6cb2eb;
+    background-color: #8ae2fe;
   }
 
   .xl\:focus\:bg-blue-lighter:focus {
@@ -24384,11 +24398,11 @@ table {
   }
 
   .xl\:border-blue {
-    border-color: #3490dc;
+    border-color: #47cdff;
   }
 
   .xl\:border-blue-light {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .xl\:border-blue-lighter {
@@ -24676,11 +24690,11 @@ table {
   }
 
   .xl\:hover\:border-blue:hover {
-    border-color: #3490dc;
+    border-color: #47cdff;
   }
 
   .xl\:hover\:border-blue-light:hover {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .xl\:hover\:border-blue-lighter:hover {
@@ -24968,11 +24982,11 @@ table {
   }
 
   .xl\:focus\:border-blue:focus {
-    border-color: #3490dc;
+    border-color: #47cdff;
   }
 
   .xl\:focus\:border-blue-light:focus {
-    border-color: #6cb2eb;
+    border-color: #8ae2fe;
   }
 
   .xl\:focus\:border-blue-lighter:focus {
@@ -27787,11 +27801,11 @@ table {
   }
 
   .xl\:text-blue {
-    color: #3490dc;
+    color: #47cdff;
   }
 
   .xl\:text-blue-light {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .xl\:text-blue-lighter {
@@ -28079,11 +28093,11 @@ table {
   }
 
   .xl\:hover\:text-blue:hover {
-    color: #3490dc;
+    color: #47cdff;
   }
 
   .xl\:hover\:text-blue-light:hover {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .xl\:hover\:text-blue-lighter:hover {
@@ -28371,11 +28385,11 @@ table {
   }
 
   .xl\:focus\:text-blue:focus {
-    color: #3490dc;
+    color: #47cdff;
   }
 
   .xl\:focus\:text-blue-light:focus {
-    color: #6cb2eb;
+    color: #8ae2fe;
   }
 
   .xl\:focus\:text-blue-lighter:focus {
